Ensure the text in the delete button is centered (e.g., on mobile).

--- a/docs/assets/css/grid.scss
+++ b/docs/assets/css/grid.scss
@@ -52,6 +52,7 @@
         }
 
         &__delete-button {
+            text-align: center;
             background-color: #c00;
             border: none;
             border-radius: 17px;
